Refactor into ComputerPlayer.js

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <script src="deck.js"></script>
+    <script src="ComputerPlayer.js"></script>
     <script src="nertz.js"></script>
     <title>Nertz</title>
   </head>
